fixed layout issues and added css to modals

--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -11,7 +11,8 @@
     grid-template-columns: repeat(4, 1fr);
     padding: 0;
     margin-top: 5.5rem;
-    gap: 0.9rem
+    gap: 0.9rem;
+
 }
 
 
@@ -19,7 +20,7 @@
 
     margin: 0;
     width: 100%;
-    
+
 }
 
 .card {
@@ -27,11 +28,11 @@
     border-radius: 15px;
 }
 
-img {
+#spot-image {
     width: 100%;
     border-radius: inherit;
-    height:100%;
-    object-fit: cover
+    height:300px;
+    object-fit: cover;
 }
 
 .details-container {
