--- a/frontend/src/components/SpotDetailsPage/SpotDetailsPage.css
+++ b/frontend/src/components/SpotDetailsPage/SpotDetailsPage.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 2fr 2fr;
     gap: 1rem;
-    /* border: 5px solid black; */
+    border: 5px solid black;
     border-radius: 15px;
     overflow: hidden;
     
@@ -12,8 +12,21 @@
     grid-template-columns: 2fr 2fr;
     grid-template-rows: 2fr 2fr;
     gap: 1rem;
+    border: 2px solid red;
 }
 
+.not-preview-imgs {
+    border: 2px solid blue;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#the-preview-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .middle-section {
     display: grid;
     grid-template-columns: 2fr 1fr;
